[gd_scene load_steps=3 format=2]

[ext_resource path="res://HttpSample.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/ENetClient.gd" type="Script" id=2]

[node name="ENetClient" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.375
margin_top = -118.4
margin_right = -129.375
margin_bottom = -64.4005
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 69.3555
margin_top = -117.931
margin_right = 253.355
margin_bottom = -63.9309
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 67.0
text = "Status"
align = 1
valign = 1

[node name="MessagesFromServer" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -205.0
margin_right = 190.0
margin_bottom = -65.0
text = "Message From Server"
[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
